--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.08.2022 08:15:21</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.08.2022 08:48:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Čtvrtek, 18. 08. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrachová s klobásou</strong>
+<strong>Žampionová smetanová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Burger s trhaným vepřovým masem, karamelizovanou cibulkou, polníčkem, sýrem a hranolkami</strong>
+<strong>Čevabčiči s vařeným bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							161,-
+							143,-
 						</span>
 </p>
 <p>
-<strong>Asijský cizrnový salát s kuřecím masem</strong>
+<strong>Kuřecí stehno ,,GARAM MASALA” s kari rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							141,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: asijské koleno, pečeně brambory, Grilovaná zelenina, Tilapie se žampiony, rýže</strong>
+<strong>Míchaný salát s tuňákem, vejcem a pečeným bramborem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							141,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: pečeně brambory, Tilapie na grilované zelenině, zelenina, rýže, koleno</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: kus kus s rajčaty a žampiony, tzatziki</strong>
+<strong>SALÁTY: tzatziki, cizrnový s kořenovou zeleniny, kuskus s rajčaty a žampiony</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -52,7 +59,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 18.8.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Karamelový cheesecake</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Kokosová bábovka </div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hovězí vývar, nudle, zelenina, bylinky v menu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hovězí vývar, nudle, zelenina, bylinky samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>140g Uzené kachní prso, míchaný salát, pomeranč, červená cibule, granátové jablko, bylinkový dresink </div>
+<div class="cena">179 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>250g Kuřecí supreme, máslová tarhoňa, omáčka z pečených paprik, nakládaný květák, pažitka</div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Poke bowl, sushi rýže, červená řepa, avokádo, okurka, ředkvička, sezam, máta <em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
