--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.08.2022 09:11:19</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.08.2022 09:36:29</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -137,7 +137,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s citronem a kaparovym maslem, bramborovy salat s cuketami, zelenou cibulkou a majonezou 155</li><li>Italske citronove rizoto s platky cerstveho gravlaxu a koprovym pestem, salatek 179</li><li>Thajske hovezi massaman kari s kokosovym mlekem, arasidy, vonavym korenim, pecenymi paprikami a zeleninou, jasminova ryze 155</li><li>Bramborove gnocchi s trhanou kachnou pecenou na korenove zelenine a zralou goudou, pikantni cuketove cukemono s prazenym sezamem 175</li><li>Pecene papriky a maslova dyne zapecene s bylinkami a goudou, korenena ryze s beluga cockou, okurkove tzatziki, salatek 155</li></ol>
+<ol><li>Peceny jihocesky pstruh s citronem a kaparovym maslem, bramborovy salat s cuketami, zelenou cibulkou a majonezou 155</li><li>Italske citronove rizoto s platky cerstveho gravlaxu a koprovym pestem, salatek 179</li><li>Thajske hovezi massaman kari s kokosovym mlekem, arasidy, vonavym korenim, pecenymi paprikami, bramborami a zeleninou, jasminova ryze 155</li><li>Bramborove gnocchi s trhanou kachnou pecenou na korenove zelenine a zralou goudou, pikantni cuketove cukemono s prazenym sezamem 175</li><li>Pecene papriky a maslova dyne zapecene s bylinkami a goudou, korenena ryze s beluga cockou, okurkove tzatziki, salatek 155</li></ol>
 </td>
 </tr>
 </table>
