--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.08.2022 11:12:44</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 18.08.2022 11:24:18</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -142,7 +142,7 @@
 </tr>
 </table>
 <table>
-<tr><th>Čínská restaurace YOUYOUGE<br><a href="https://www.jidlonawebu.cz/122436">https://www.jidlonawebu.cz/122436</a></th></tr>
+<tr><th>Čínská restaurace YOUYOUGE<br><a href="https://wolt.com/en/cze/prague/restaurant/youyouge">https://wolt.com/en/cze/prague/restaurant/youyouge</a></th></tr>
 <tr>
 <td>
 </td>
